# Meson options

option('docdir',
  type: 'string',
  value: 'share/doc/qman',
  description : 'Location of additional documentation'
)

option('man-pages',
  type: 'feature',
  value: 'auto',
  description: 'Install manual page'
)

option('docs',
  type: 'feature',
  value: 'auto',
  description: 'Install additional documentation'
)

option('gzip',
  type: 'feature',
  value: 'auto',
  description: 'Support gzip-compressed manual pages'
)

option('bzip2',
  type: 'feature',
  value: 'auto',
  description: 'Support bzip2-compressed manual pages'
)

option('lzma',
  type: 'feature',
  value: 'auto',
  description: 'Support xz-compressed manual pages'
)

option('tests',
  type: 'feature',
  value: 'auto',
  description: 'Enable unit tests'
)
